@@ -1,11 +1,12 @@
 # This server architecture was started as a C++ server producing HTML in its own while(true) Socket.accept out.println loop
 # In 2015 the server was written in Java which produced the client pages as Strings containing HTML
-# In 2019 it was ported to heavy J2EE on Apache with the client still being  HTML
+# In 2016 the JAVA server could read CSV, generate HTML pages as write CSV for eBilanz import
+# In 2019 it was ported to heavy J2EE on Apache with the client still being HTML yet gennerated by JSP
 # In 2020 the server was migrated back to plain Java but sent data packets to the client which was now using JavaScript
 # In 2021 the server was ported to NODE JS which sends the same (huge) JSON packet to the 14 client pages in JavaScript
 #         new function: search keyword or account in all historic transactions
 #         new function: status page of all accounts and recent transactions
 # In 2022 the frontend based on React was added
-#         the server runs NODE JS on Amazon Web Services while one client uses JavaScript and another client uses React
+#         the server runs NODE JS on Amazon Web Services while the old client uses JavaScript/BE and another client uses React/FE
 #
 
